# fp2022

SQL/: README.md  REPL.ml  SQL.opam  dune-project  gen_test_data.sh  repl.t
SQL/QCtest/: QCTests.ml  dune  runULC.ml
SQL/demos/: demoAO.ml  demoNO.ml  demoParse.ml  demoQueryGen.ml  dune  interpretTests.t  parsingTests.t  querygenTests.t
SQL/demos/bigInterpret.t/: gen_test_data.sh  test.sh
SQL/demos/interpret.t/: run.t
SQL/demos/interpret.t/testdb/: t3.csv
SQL/lib/: Pprintast.ml  Pprintnode.ml  Printast.ml  ast.ml  dune  interpret.ml  interpret.mli  meta.ml  meta.mli  parser.ml  parser.mli  relation.ml  relation.mli  tests.ml  utils.ml
