(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Michael Polyntsov")

(maintainers "Michael Polyntsov")

(bug_reports "github.com/polynstov/fp2022")

(homepage "github.com/polynstov/fp2022")

(package
 (name SQL) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "An interpreter for a subset of SQL language")
 (description
  "FIXME. A longer description, for example, which are the most interesing features being supported, etc.")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_expect
  ppx_deriving
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
